# tracerite

./: .gitignore  Demo.ipynb  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  setup.py  test_range_verification.py
.github/workflows/: ci.yml  python-publish.yml
demo/: Demo.html  Demo.ipynb  Notebook.ipynb  Scenarios.ipynb  console_demo.py  fastapi_demo.py  sanic_demo.py
demo/helpers/: __init__.py  acme.py  async_tasks.py  broken_syntax.py  calc.py  data.py  html.py  messages.py  objects.py  scenarios.py  types.py
docs/: API.md  Development.md
docs/screenshots/scripts/: create_chain_comparison.py  create_features_composite.py  create_group_comparison.py
niceback/: __init__.py  html.py  inspector.py  logging.py  notebook.py  on_notebook.py  style.css  trace.py
niceback.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: benchmark.py  generate_demos.py
tests/: __init__.py  conftest.py  errorcases.py  helpers.py  hidden_module.py  sanic_compat.py  test_basic.py  test_chain_analysis.py  test_coverage_edge_cases.py  test_exception_groups.py  test_fastapi.py  test_fragments.py  test_html.py  test_html_additional.py  test_html_cornercases.py  test_html_error_marking.py  test_html_structure.py  test_inspector_additional.py  test_inspector_core.py  test_inspector_cornercases.py  test_inspector_numpy.py  test_inspector_torch.py  test_json_chain.py  test_logging.py  test_marked_function.py  test_maximum_coverage.py  test_page.py  test_syntaxerror.py  test_trace.py  test_trace_chain_analysis.py  test_trace_collect.py  test_trace_cornercases.py  test_trace_exception_groups.py  test_trace_fragments.py  test_trace_order.py  test_trace_syntaxerror.py  test_trace_with_context.py  test_tty.py
tracerite/: __init__.py  chain_analysis.py  fastapi.py  hooks.py  html.py  inspector.py  notebook.py  script.js  style.css  syntaxerror.py  trace.py  trace_cpy.py  tty.py
tracerite/trace/: __init__.py  chain_analysis.py  collect.py  constants.py  core.py  digest.py  finalize.py  fragments.py  order.py  syntaxerror.py  trace_cpy.py  typing.py  withblock.py
