[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tracerite"
dynamic = ["version"]
description = "Human-readable HTML tracebacks for Python exceptions"
readme = "README.md"
authors = [
    { name = "Sanic Community", email = "tronic@noreply.users.github.com" }
]
license = { text = "Public Domain" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "html5tagger>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/sanic-org/tracerite"
Repository = "https://github.com/sanic-org/tracerite"
Issues = "https://github.com/sanic-org/tracerite/issues"

[project.optional-dependencies]
nb = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.3.8",
    "notebook>=7.3.3",
]

[dependency-groups]
dev = [
    "nox",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "numpy>=1.20.0",
    "torch>=2.8.0",
    "beautifulsoup4>=4.13.4",
    "jupyterlab>=4.3.8",
    "pytest-cov>=4.0.0",
    "msgspec>=0.18.0",
    "pydantic>=2.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.7",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/tracerite",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["tracerite"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["tracerite"]
omit = ["tracerite/notebook.py", "tracerite/trace_cpy.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError:",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B904"]

[tool.ruff.lint.isort]
known-first-party = ["tracerite"]
